Change the directory of the image

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <div class="card">
       <div class="image">
-        <img class="card-img-top" src="/images/image-qr-code.png" alt="image-qr-code">
+        <img class="card-img-top" src="image-qr-code.png" alt="image-qr-code">
       </div>
       <div class="card-body">
         <h4 class="card-title">Improve your front-end skills by building projects</h4>
